--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,8 @@
   background-size: cover ;
   background-repeat: no-repeat;
   /* width: 100vw ;
-  height: 100vh ; */
+  /* height: 100vh ; */
+  height: 100vh;
 }
 
 .main {
