--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,13 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Nabana-bold';
+    src: url('/fonts/nabana.otf');
+    font-weight: 400;
+    font-style: normal;
+}
+
 
 /* h1, h2, {
    font-family: 'Stardew';
